app/src/main/kotlin/org/example/compiler/error/RedefinitionError.kt
package org.example.compiler.error

class RedefinitionError(redefinedName: String) :
    SyntaxError("redefinition of '$redefinedName'")
